--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,6 @@
     <title>BattleBorn</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
 </head>
 <body>
 <!-- Section HEADER -->
@@ -212,13 +210,13 @@
                 
 
 <!-- jQ-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/slick.min.js"></script>
 <!-- /jQ end-->
 
 <!-- Main js -->
-    <script src="assets/js/main.js" type="text/javascript"></script>
+    <script src="assets/js/main.min.js" type="text/javascript"></script>
 <!-- Main js END -->
 </body>
 </html>
